--- a/index.html
+++ b/index.html
@@ -18,9 +18,6 @@
 <body>
     <header>
         <nav class="primary-navigation">
-            <a href="" class="logo">
-                <div class="image-container"><img src="assets/images/logo.png" alt="clean swim"></div>
-            </a>
             <ul class="menu">
                 <li><a href="">home</a></li>
                 <li><a href="">shop</a></li>
@@ -28,20 +25,23 @@
                 <li><a href="">blog</a></li>
                 <li><a href="">contact</a></li>
             </ul>
-            <!-- <ul class="action">
-                <li><a href=""><i class="fa-solid fa-magnifying-glass"></i></a></li>
-                <li><a href=""><i class="fa-solid fa-user"></i></a>
-                    <ul>
-                        <li><a href="">Account Details</a></li>
-                        <li><a href="">Dashboard</a></li>
-                    </ul>
-                </li>
-            </ul> -->
         </nav>
     </header>
     <main>
         <section id="hero">
-            <h1>Clean Swim: <br> Unleash the Sparkle!</h1>
+            <div class="section">
+                <div class="logo-container">
+                    <img src="assets/images/clean-swim-logo.png" alt="">
+                </div>
+                <h1>Clean Swim Pool Cleaning Service</h1>
+                <p>"Dive into pristine, sparkling waters with our expert pool cleaning service. We ensure hassle-free pool ownership, delivering top-notch maintenance and repairs. Enjoy a worry-free oasis &hyphen; jump in today!"</p>
+                <div class="buttons">
+                    <a href="" class="lm-btn">Learn More</a>
+                </div>
+            </div>
+            <div class="image-container">
+                <img src="assets/images/male_and_female_workers_cleaning_swimming_pool copy.png" alt="">
+            </div>
         </section>
     </main>
 </body>
