--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clean Swim</title>
 
-    <link rel="shortcut icon" href="assets/images/clean-swim-logo.png" type="image/png">
+    <link rel="shortcut icon" href="assets/images/sm-logo.png" type="image/png">
 
     <!-- fontawesome css -->
     <link rel="stylesheet" href="assets/fontawesome/css/all.min.css">
@@ -16,42 +16,58 @@
 
     <!-- custom css -->
     <link rel="stylesheet" href="assets/css/style.css">
+
+    <!-- fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Roboto:wght@300;400;500;700;900&display=swap"
+        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;600;700&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
     <header>
         <nav class="primary-navigation">
+            <a href="" class="image-container">
+                <img src="assets/images/tag.png" alt="">
+            </a>
             <ul class="menu">
-                <li><a href="">home</a></li>
-                <li><a href="">services</a></li>
-                <li><a href="">shop</a></li>
-                <li><a href="">blog</a></li>
-                <li><a href="">contact</a></li>
+                <li class="menu-item"><a href="">Home</a></li>
+                <li class="menu-item"><a href="">Services</a></li>
+                <li class="menu-item"><a href="">Shop</a></li>
+                <li class="menu-item"><a href="">Blog</a></li>
+                <li class="menu-item"><a href="">Contact Us</a></li>
             </ul>
+            <div class="button">
+                <a href=""><i class="fa-solid fa-user"></i></a>
+            </div>
         </nav>
     </header>
     <main>
         <section id="hero">
-            <div class="section">
-                <div class="logo-container" data-aos="fade-up" data-aos-delay="300">
-                    <img src="assets/images/clean-swim-logo.png" alt="">
+            <div class="container">
+                <h1>Explore our range of top-tier swimming pool cleaning chemicals and equipments</h1>
+                <p>Join a community of pool owners and expert cleaners. Recieve and share your opinions and experiences,
+                    and get feedback. We don't just sell, we create connections.</p>
+                <div class="buttons">
+                    <a href="" class="signup-btn btn">Sign Up</a>
+                    <a href="" class="login-btn btn">Sign In</a>
                 </div>
-                <h1 data-aos="fade-up" data-aos-delay="400">Clean Swim Pool Cleaning Service</h1>
-                <p data-aos="fade-up" data-aos-delay="500">"Dive into pristine, sparkling waters with our expert pool cleaning service. We ensure hassle-free pool ownership, delivering top-notch maintenance and repairs. Enjoy a worry-free oasis &hyphen; jump in today!"</p>
-                <div class="buttons" data-aos="fade-up" data-aos-delay="550">
-                    <a href="" class="lm-btn">Learn More</a>
-                </div>
-            </div>
-            <div class="image-container" data-aos="fade-in" data-aos-delay="500">
-                <img src="assets/images/male_and_female_workers_cleaning_swimming_pool copy.png" alt="">
             </div>
         </section>
-        <section>
-            <div class="card-container">
-                <div class="card">
-                    <div class="image-container">
-                        <img src="assets/images/" alt="">
-                    </div>
+        <section id="ad">
+            <div class="flex-wrap container">
+                <div class="image-container">
+                    <img src="assets/images/mobile-1.png" alt="">
+                </div>
+                <div class="text">
+                    <h3>Lorem, ipsum.</h3>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nemo aut fugit et in odit sapiente
+                        molestiae incidunt, veritatis laudantium suscipit, sunt quod? Modi quia esse in pariatur fugit
+                        quas ut laborum cupiditate assumenda rem, fugiat officiis consectetur tenetur ex ipsam?</p>
+                    <a href="" class="btn">Join Us</a>
                 </div>
             </div>
         </section>
@@ -60,7 +76,7 @@
     <!-- aos -->
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
-      AOS.init();
+        AOS.init();
     </script>
 </body>
 
