--- a/index.html
+++ b/index.html
@@ -63,10 +63,7 @@
                     <img src="assets/images/mobile-1.png" alt="">
                 </div>
                 <div class="text">
-                    <h3>Lorem, ipsum.</h3>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nemo aut fugit et in odit sapiente
-                        molestiae incidunt, veritatis laudantium suscipit, sunt quod? Modi quia esse in pariatur fugit
-                        quas ut laborum cupiditate assumenda rem, fugiat officiis consectetur tenetur ex ipsam?</p>
+                    <h3>Looking to dive into a rewarding opportunity? Register and become one of our team members.</h3>
                     <a href="" class="btn">Join Us</a>
                 </div>
             </div>
