mobile menu design

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;600;700&display=swap"
         rel="stylesheet">
+
+    <!-- icons -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 
 <body>
@@ -40,15 +43,37 @@
                 <li class="menu-item"><a href="">Blog</a></li>
                 <li class="menu-item"><a href="">Contact Us</a></li>
             </ul>
-            <div class="button">
+            <div class="buttons">
                 <a href=""><i class="fa-solid fa-user"></i></a>
+                <a href=""><i class="fa-solid fa-bell"></i></a>
+                <div class="menu-toggle">
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                </div>
             </div>
         </nav>
     </header>
+    <nav class="mobile-menu">
+        <ul>
+            <li class="menu-item"><a href=""><span
+                        class="material-symbols-outlined">home</span><span>Home</span></a></li>
+            <li class="menu-item"><a href=""><span
+                        class="material-symbols-outlined">school</span><span>Classes</span></a></li>
+            <li class="menu-item"><a href=""><span
+                        class="material-symbols-outlined">gallery_thumbnail</span><span>Gallery</span></a></li>
+            <li class="menu-item"><a href=""><span
+                        class="material-symbols-outlined">group</span><span>Staff</span></a></li>
+            <li class="menu-item"><a href=""><span
+                        class="material-symbols-outlined">contacts</span><span>Contacts</span></a></li>
+            <li class="menu-item"><a href=""><span
+                        class="material-symbols-outlined">info</span><span>About</span></a></li>
+        </ul>
+    </nav>
     <main>
         <section id="hero">
             <div class="container">
-                <h1>Explore our range of top-tier swimming pool cleaning chemicals and equipments</h1>
+                <h1>Explore our range of top-tier swimming pool cleaning chemicals and equipments and ready for hire pool cleaners</h1>
                 <p>Join a community of pool owners and expert cleaners. Recieve and share your opinions and experiences,
                     and get feedback. We don't just sell, we create connections.</p>
                 <div class="buttons">
@@ -63,13 +88,62 @@
                     <img src="assets/images/mobile-1.png" alt="">
                 </div>
                 <div class="text">
-                    <h3>Looking to dive into a rewarding opportunity? Register and become one of our team members.</h3>
-                    <a href="" class="btn">Join Us</a>
+                    <h3>Find all you need in one place. Excellent cleaners and the best swimming pool cleaning chemicals and equipments.</h3>
+                    <a href="" class="btn">Shop Now</a>
                 </div>
+            </div>
+        </section>
+        <section id="banner">
+            <h5>Your One Stop Online Shop For Everything Cleaning Supplies Too!</h5>
+        </section>
+        <section id="shop">
+            <h3>Featured Products</h3>
+            <div class="flex-grid">
+                <div class="product-card">
+                    <div class="image-container">
+                        <img src="assets/images/chlorine-bucket.png" alt="Chlorine">
+                    </div>
+                    <div class="label">
+                        <h5 class="product-name">Chlorine</h5>
+                        <p>GH¢ 999.99</p>
+                    </div>
+                </div>
+                <div class="product-card">
+                    <div class="image-container">
+                        <img src="assets/images/leaf-rake.webp" alt="leaf-rake">
+                    </div>
+                    <div class="label">
+                        <h5 class="product-name">Leaf Rake</h5>
+                        <p>GH¢ 999.99</p>
+                    </div>
+                </div>
+                <div class="product-card">
+                    <div class="image-container">
+                        <img src="assets/images/vacuum-head.png" alt="vacuum-head">
+                    </div>
+                    <div class="label">
+                        <h5 class="product-name">Vacuum Head</h5>
+                        <p>GH¢ 999.99</p>
+                    </div>
+                </div>
+                <div class="product-card">
+                    <div class="image-container">
+                        <img src="assets/images/telescopic-pole.jpg" alt="telescopic-pole">
+                    </div>
+                    <div class="label">
+                        <h5 class="product-name">Telescopic Pole</h5>
+                        <p>GH¢ 999.99</p>
+                    </div>
+                </div>
+            </div>
+            <div class="button">
+                <a href="" class="btn">Shop Now</a>
             </div>
         </section>
     </main>
 
+    <!-- menu -->
+    <script src="assets/js/menu.js"></script>
     <!-- aos -->
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
