--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
         rel="stylesheet">
 
     <!-- icons -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 
 <body>
@@ -45,7 +46,7 @@
             </ul>
             <div class="buttons">
                 <a href=""><i class="fa-solid fa-user"></i></a>
-                <a href=""><i class="fa-solid fa-bell"></i></a>
+                <a href=""><i class="fa-solid fa-bag-shopping"></i></a>
                 <div class="menu-toggle">
                     <span class="bar"></span>
                     <span class="bar"></span>
@@ -56,24 +57,25 @@
     </header>
     <nav class="mobile-menu">
         <ul>
-            <li class="menu-item"><a href=""><span
-                        class="material-symbols-outlined">home</span><span>Home</span></a></li>
+            <li class="menu-item"><a href=""><span class="material-symbols-outlined">home</span><span>Home</span></a>
+            </li>
             <li class="menu-item"><a href=""><span
                         class="material-symbols-outlined">school</span><span>Classes</span></a></li>
             <li class="menu-item"><a href=""><span
                         class="material-symbols-outlined">gallery_thumbnail</span><span>Gallery</span></a></li>
-            <li class="menu-item"><a href=""><span
-                        class="material-symbols-outlined">group</span><span>Staff</span></a></li>
+            <li class="menu-item"><a href=""><span class="material-symbols-outlined">group</span><span>Staff</span></a>
+            </li>
             <li class="menu-item"><a href=""><span
                         class="material-symbols-outlined">contacts</span><span>Contacts</span></a></li>
-            <li class="menu-item"><a href=""><span
-                        class="material-symbols-outlined">info</span><span>About</span></a></li>
+            <li class="menu-item"><a href=""><span class="material-symbols-outlined">info</span><span>About</span></a>
+            </li>
         </ul>
     </nav>
-    <main>
+    <main onclick="menuShut()">
         <section id="hero">
             <div class="container">
-                <h1>Explore our range of top-tier swimming pool cleaning chemicals and equipments and ready for hire pool cleaners</h1>
+                <h1>Explore our range of top-tier swimming pool cleaning chemicals and equipments and ready for hire
+                    pool cleaners</h1>
                 <p>Join a community of pool owners and expert cleaners. Recieve and share your opinions and experiences,
                     and get feedback. We don't just sell, we create connections.</p>
                 <div class="buttons">
@@ -88,7 +90,8 @@
                     <img src="assets/images/mobile-1.png" alt="">
                 </div>
                 <div class="text">
-                    <h3>Find all you need in one place. Excellent cleaners and the best swimming pool cleaning chemicals and equipments.</h3>
+                    <h3>Find all you need in one place. Excellent cleaners and the best swimming pool cleaning chemicals
+                        and equipments.</h3>
                     <a href="" class="btn">Shop Now</a>
                 </div>
             </div>
@@ -140,10 +143,46 @@
                 <a href="" class="btn">Shop Now</a>
             </div>
         </section>
+        <section id="map">
+            <div class="flex-grid">
+                <div class="locations">
+                    <h5>Our Affiliate Retail Shops</h5>
+                    <ul>
+                        <li class="shop-location">
+                            <li><i class="fa-solid fa-location-pin"></i></li>
+                            <li>Pool Glory</li>
+                            <li>Adjiringanor, Accra</li>
+                            <li>+233 (0) 54 970 8561</li>
+                            <li class="buttons">
+                                <a href=""><i class="fa-brands fa-whatsapp"></i></a>
+                                <a href=""><i class="fa-brands fa-facebook"></i></a>
+                                <a href=""><i class="fa-brands fa-x-twitter"></i></a>
+                                <a href=""><i class="fa-brands fa-instagram"></i></a>
+                            </li>
+                        </li>
+                    </ul>
+                </div>
+                <div class="mapouter">
+                    <div class="gmap_canvas">
+                        <iframe class="gmap_iframe" width="100%" frameborder="0" scrolling="no" marginheight="0"
+                            marginwidth="0"
+                            src="https://maps.google.com/maps?width=600&amp;height=400&amp;hl=en&amp;q=accra&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe>
+                        <a href="https://connectionsgame.org/">Connections NYT</a>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
+    <footer style="height: 300px;">
+
+    </footer>
 
     <!-- menu -->
     <script src="assets/js/menu.js"></script>
+
+    <!-- fontawesome -->
+    <script src="https://kit.fontawesome.com/655ab35400.js" crossorigin="anonymous"></script>
+
     <!-- aos -->
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
