--- a/index.html
+++ b/index.html
@@ -90,9 +90,11 @@
                     <img src="assets/images/mobile-1.png" alt="">
                 </div>
                 <div class="text">
-                    <h3>Find all you need in one place. Excellent cleaners and the best swimming pool cleaning chemicals
-                        and equipments.</h3>
-                    <a href="" class="btn">Shop Now</a>
+                    <h3>Find all you need in one place. Excellent cleaners and the best swimming pool cleaning chemicals and equipments.</h3>
+                    <div class="buttons">
+                        <a href="" class="btn">Shop Now</a>
+                        <a href="" class="btn">Hire a Cleaner</a>
+                    </div>
                 </div>
             </div>
         </section>
@@ -149,16 +151,48 @@
                     <h5>Our Affiliate Retail Shops</h5>
                     <ul>
                         <li class="shop-location">
-                            <li><i class="fa-solid fa-location-pin"></i></li>
-                            <li>Pool Glory</li>
-                            <li>Adjiringanor, Accra</li>
-                            <li>+233 (0) 54 970 8561</li>
-                            <li class="buttons">
-                                <a href=""><i class="fa-brands fa-whatsapp"></i></a>
-                                <a href=""><i class="fa-brands fa-facebook"></i></a>
-                                <a href=""><i class="fa-brands fa-x-twitter"></i></a>
-                                <a href=""><i class="fa-brands fa-instagram"></i></a>
-                            </li>
+                            <ul>
+                                <li><i class="fa-solid fa-shop"></i></li>
+                                <li>Pool Glory</li>
+                                <li>Adjiringanor, Accra</li>
+                                <li>+233 (0) 54 970 8561</li>
+                                <li class="buttons">
+                                    <a href=""><i class="fa-brands fa-whatsapp"></i></a>
+                                    <a href=""><i class="fa-brands fa-facebook"></i></a>
+                                    <a href=""><i class="fa-brands fa-x-twitter"></i></a>
+                                    <a href=""><i class="fa-brands fa-instagram"></i></a>
+                                </li>
+                            </ul>
+                        </li>
+                        <hr>
+                        <li class="shop-location">
+                            <ul>
+                                <li><i class="fa-solid fa-shop"></i></li>
+                                <li>Pool Glory</li>
+                                <li>Adjiringanor, Accra</li>
+                                <li>+233 (0) 54 970 8561</li>
+                                <li class="buttons">
+                                    <a href=""><i class="fa-brands fa-whatsapp"></i></a>
+                                    <a href=""><i class="fa-brands fa-facebook"></i></a>
+                                    <a href=""><i class="fa-brands fa-x-twitter"></i></a>
+                                    <a href=""><i class="fa-brands fa-instagram"></i></a>
+                                </li>
+                            </ul>
+                        </li>
+                        <hr>
+                        <li class="shop-location">
+                            <ul>
+                                <li><i class="fa-solid fa-shop"></i></li>
+                                <li>Pool Glory</li>
+                                <li>Adjiringanor, Accra</li>
+                                <li>+233 (0) 54 970 8561</li>
+                                <li class="buttons">
+                                    <a href=""><i class="fa-brands fa-whatsapp"></i></a>
+                                    <a href=""><i class="fa-brands fa-facebook"></i></a>
+                                    <a href=""><i class="fa-brands fa-x-twitter"></i></a>
+                                    <a href=""><i class="fa-brands fa-instagram"></i></a>
+                                </li>
+                            </ul>
                         </li>
                     </ul>
                 </div>
@@ -173,10 +207,7 @@
             </div>
         </section>
     </main>
-    <footer style="height: 300px;">
-
-    </footer>
-
+    
     <!-- menu -->
     <script src="assets/js/menu.js"></script>
 
